--- a/Recipes/cookies.html
+++ b/Recipes/cookies.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h3> <strong>Description</strong></h3>
-        <h5> <p>Lasagna, Italian: a type of pasta, possibly one of the oldest types,made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings such as ragu.</p> 
-        <p> The dish may be topped with grated cheese, which becomes melted after baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven.</p> </h5>
+        <h5> <p>A chocolate chip cookie is a drop cookie that features chocolate chips or chocolate morsels as its distinguishing ingredient. Chocolate chip cookies originated in the United States around 1938, when Ruth Graves Wakefield chopped up a Nestlé semi-sweet chocolate bar and added the chopped chocolate to a cookie recipe..</p> 
+        <p> Generally, the recipe starts with a dough composed of flour, butter, both brown and white sugar, semi-sweet chocolate chips, eggs, and vanilla. Variations on the recipe may add other types of chocolate, as well as additional ingredients such as nuts or oatmeal.</p> </h5>
     
     <h3> <strong> Ingredients </strong></h3>
         <ul> 
