Added link to quiche page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul> 
         <li> <a href = "./Recipes/lasagna.html"> Link to Brenda's Lasagna Recipe </a> </li>
         <li> <a href = "./Recipes/cookies.html"> Link to Chocolate Chocolate Chip Cookies Recipe </a> </li>
+        <li> <a href = "./Recipes/quiche.html"> Link to Quick Quiche Recipe </a> </li> 
     </ul>
 
 </body>
