Made pictures of all images correct size

--- a/Recipes/quiche.html
+++ b/Recipes/quiche.html
@@ -7,7 +7,7 @@
     <title> Quick Quiche </title>
 </head>
 <body>
-    <img src = "https://images-gmi-pmc.edge-generalmills.com/3578ead1-d8d1-4f67-beef-b14fd4884fa4.jpg" alt = "Picture of Quiche"> 
+    <img src = "https://images-gmi-pmc.edge-generalmills.com/3578ead1-d8d1-4f67-beef-b14fd4884fa4.jpg" alt = "Picture of Quiche" width = "700" height = "500"> 
     <h3> <strong>Description</strong></h3>
         <h5> <p>Quiche is a French tart consisting of pastry crust filled with savoury custard and pieces of cheese, meat, seafood or vegetables. A well-known variant is quiche Lorraine, which includes lardons or bacon. Quiche may be served hot, warm or cold.</p> 
         <p> Quiche is considered a French dish; however, using eggs and cream in pastry was practised in English cuisine at least as early as the 14th century and Italian cuisine at least as early as the 13th century. </p> </h5>
